[tool.poetry]
name = "photo-enhancement"
version = "0.1.0"
description = "Lets do our photos better"
authors = ["alexander <as.frantsev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastai = "^2.7.13"
torch = "1.13.1"
gradio = "^3.49.0"
timm = "^0.9.7"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
huggingface-hub = "^0.18.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
scikit-image = "^0.22.0"
ipykernel = "^6.25.2"
toml = "^0.10.2"
nbdev = "^2.3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
